# osc-ledfx

./: CMakeLists.txt  README.md
editor/src/: doc-utils.js  emptyscene.js  index.css  index.html  index.js  jsbinding.js  jsbinding.wasm
editor/src/old/: index.html  index.js  timeliner.min.js
jsbinding/: CMakeLists.txt  jsbinding.c  test.html
lib/: fx.c  fx.h  player.c  player.h
osc/: CMakeLists.txt  main.c  tinyosc.c
pd/: osc-config-test1.pd  x-comm.pd  x-glob.pd  x-layer.pd
test/: CMakeLists.txt  main.c
